# vikuatools

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/vikuatools/: __init__.py  bigquery.py  fulcrum.py  hubspot.py  instagram.py  odoo.py  utils.py
tests/: test_vikuatools.py
