[tool.poetry]
name = "vikuatools"
version = "0.1.0"
description = "Tools for BI and Analytics aimed to shape smart cities"
authors = ["Rodrigo Serrano"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
